--- a/auth_config.json
+++ b/auth_config.json
@@ -1,4 +1,4 @@
 {
-  "domain": "your-domain.auth0.com",
-  "clientId": "your-client-id"
+  "domain": "dev-5al7g11ynv5zusp5.us.auth0.com",
+  "clientId": "S2dK5QJ4xom8HpJuHNL1omRtcDFXNMkw"
 }
