Add Gemini AI backend and update dashboard UI - Implemented Flask backend with Gemini API integration for AI chat and analysis - Updated dashboard regions from Texas cities to West/East/Midwest - Changed competitor names to Spectrum and Verizon - Replaced stat icons with Font Awesome icons - Created social media feedback JSON data file - Updated multiple dashboard labels and removed obsolete buttons

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,13 @@ npm-debug.log*
 .env
 .env.local
 
+# Python
+server/.venv/
+server/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
 # Build outputs
 dist/
 build/
